[package]
name = "pms-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
judge-protocol = { git = "https://github.com/polymath-cc/judge-protocol" }
async-std = "1.12.0"
bincode = "1.3.3"
k256 = { version = "0.11.5", features = ["default", "ecdh", "serde"] }
rand = "0.8.5"
futures = "0.3.24"
encoding = "0.2.33"